# semantic_slam_nav_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
aip-cpp/include/: README.md  body_analysis.h  content_censor.h  easydl.h  face.h  image_classify.h  image_process.h  image_search.h  kg.h  nlp.h  ocr.h  speech.h
aip-cpp/include/base/: base.h  http.h  utils.h
aip-cpp/src/: face_pub_node.cpp  gesture_pub_node.cpp  gesture_publish.cpp
config/: README.md  TUM1.yaml  d400_costmap.yaml  dwa_planning.yaml  kinectv2.yaml  kinectv2_costmap.yaml  kitty.yaml  openlorias.rviz  realsensed400.yaml  setting_file.yaml
costmap/include/costmap_lrgbd_ros/: dwa_planning.h  lrgbd2xz.h
costmap/src/: dwa_planning.cpp  lrgbd2xz.cpp  lrgbd_costmap_node.cpp  record_path_node.cpp
data/: CameraTrajectory.txt  KeyFrameTrajectory.txt  gt.txt  readme.md  surfel_map_mesh.PLY  waypoints.txt
data/msc/3cd2e3eb9f31562b8e12d381b7a86a71/: u.data  urec.data  usr.cdata1578585164  usr.cdata_r
dense_surfel_mapping/src/: ros_node.cpp  surfel_map.cpp
include/: Node.h  RGBDNode.h
launch/: ORB_Dense_Surfel_Mapping.launch  ORB_Semantic_Navigation.launch  ORB_Semantic_SLAM.launch  ORB_Sematic_Nav.launch  gesture_speak.launch  kinect_orb_semantic.launch
msg/: Arrived.msg  Gesture.msg
orbslam/include/: BoostArchiver.h  Detector.h  Flow.h  KeyFrameDatabase.h  Map.h  MapDrawer.h  RunDetect.h  System.h  Tracking.h  Viewer.h  pointcloudmapping.h
orbslam/src/: Detector.cc  Frame.cc  KeyFrame.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ObjectDatabase.cc  RunDetect.cc  System.cc  Tracking.cc  Viewer.cc  pointcloudmapping.cc
orbslam_back/include/: Detector.h  KeyFrame.h  PnPsolver.h  RunDetect.h  Viewer.h
orbslam_back/src/: Detector.cc  Flow.cc  Frame.cc  FrameDrawer.cc  Map.cc  MapDrawer.cc  Merge2d3d.cc  MergeSG.cc  Optimizer.cc  RunDetect.cc  System.cc  Viewer.cc
script/: get_API_right.py  get_gesture.py  load_music.py  path2waypoints.py  publisher.py  qua2rota.py
speech/src/: iat_publish_node.cpp  linuxrec.c  tts_subscribe.cpp  tts_subscribe_node.cpp
src/: Node.cc  RGBDNode.cpp  iat_publish.cpp  kinect_camera_node.cpp  speech_recognizer.c  tts_subscribe.cpp
